--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         
 <div class="AliceMoraa">
-            <div>
+            <div class="Lisam">
                 <hr>
                 <h4>SAME DAY</h4>
                 <p>All standard orders <br> placed by 2pm <br> east same day</P>
